k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: school-frontend-deployment
spec:
  selector:
    matchLabels:
      app: school-frontend
  template:
    metadata:
      labels:
        app: school-frontend
    spec:
      containers:
      - name: school-frontend-container
        image: abdul1s/microsvc-school-project-frontend:0.4
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-clusterip
spec:
  type: ClusterIP
  selector:
    app: school-frontend
  ports:
  - port: 3000
    targetPort: 3000
