k8s/ingress-backend-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-svc-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /employees(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: employee-svc-clusterip
                port:
                  number: 5003
          - path: /students(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: student-svc-clusterip
                port:
                  number: 5001
          - path: /teachers(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: teacher-svc-clusterip
                port:
                  number: 5002
