k8s/ingress-frontend-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-svc-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-clusterip
                port:
                  number: 3000
